# W-ASI

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  WASI_BLUEPRINT.md
.github/workflows/: ci.yml
aur/: .SRCINFO  PKGBUILD  PKGBUILD-git  wasi.desktop
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
